--- a/package.json
+++ b/package.json
@@ -3,9 +3,6 @@
   "version": "0.0.0",
   "private": true,
   "dependencies": {
-    "icalendar":"*",
-    "body-parser": "~1.13.2",
-    "cookie-parser": "~1.3.5",
-    "debug": "~2.2.0",
+    "icalendar":"0.7.1"
   }
 }
